--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "orbits",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "d3": "^3.5.5"
+  },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^0.7.3",
